--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,7 @@ require:
   - rubocop-minitest
 
 AllCops:
+  NewCops: enable
   Exclude:
     - ext/**/*
     - vendor/bundle/**/*
@@ -10,119 +11,4 @@ Layout/LineLength:
   Max: 140
 Style/StringLiterals:
   EnforcedStyle: double_quotes
-Style/HashEachMethods:
-  Enabled: true
-Style/HashTransformKeys:
-  Enabled: true
-Style/HashTransformValues:
-  Enabled: true
-Lint/RaiseException:
-  Enabled: true
-Lint/StructNewOverride:
-  Enabled: true
-Layout/SpaceAroundMethodCallOperator:
-  Enabled: true
-Style/ExponentialNotation:
-  Enabled: true
-Layout/EmptyLinesAroundAttributeAccessor:
-  Enabled: true
-Lint/DeprecatedOpenSSLConstant:
-  Enabled: true
-Style/RedundantRegexpCharacterClass:
-  Enabled: true
-Style/RedundantRegexpEscape:
-  Enabled: true
-Style/SlicingWithRange:
-  Enabled: true
-Lint/DuplicateElsifCondition:
-  Enabled: true
-Lint/MixedRegexpCaptureTypes:
-  Enabled: true
-Style/AccessorGrouping:
-  Enabled: true
-Style/ArrayCoercion:
-  Enabled: true
-Style/BisectedAttrAccessor:
-  Enabled: true
-Style/CaseLikeIf:
-  Enabled: true
-Style/HashAsLastArrayItem:
-  Enabled: true
-Style/HashLikeCase:
-  Enabled: true
-Style/RedundantAssignment:
-  Enabled: true
-Style/RedundantFetchBlock:
-  Enabled: true
-Style/RedundantFileExtensionInRequire:
-  Enabled: true
-Performance/AncestorsInclude:
-  Enabled: true
-Performance/BigDecimalWithNumericArgument:
-  Enabled: true
-Performance/RedundantSortBlock:
-  Enabled: true
-Performance/RedundantStringChars:
-  Enabled: true
-Performance/ReverseFirst:
-  Enabled: true
-Performance/SortReverse:
-  Enabled: true
-Performance/Squeeze:
-  Enabled: true
-Performance/StringInclude:
-  Enabled: true
-Minitest/AssertInDelta:
-  Enabled: true
-Minitest/AssertionInLifecycleHook:
-  Enabled: true
-Minitest/AssertKindOf:
-  Enabled: true
-Minitest/AssertOutput:
-  Enabled: true
-Minitest/AssertPathExists:
-  Enabled: true
-Minitest/AssertSilent:
-  Enabled: true
-Minitest/LiteralAsActualArgument:
-  Enabled: true
-Minitest/MultipleAssertions:
-  Enabled: true
-Minitest/RefuteInDelta:
-  Enabled: true
-Minitest/RefuteKindOf:
-  Enabled: true
-Minitest/RefutePathExists:
-  Enabled: true
-Minitest/TestMethodName:
-  Enabled: true
-Minitest/UnspecifiedException:
-  Enabled: true
-Lint/BinaryOperatorWithIdenticalOperands:
-  Enabled: true
-Lint/DuplicateRescueException:
-  Enabled: true
-Lint/EmptyConditionalBody:
-  Enabled: true
-Lint/FloatComparison:
-  Enabled: true
-Lint/MissingSuper:
-  Enabled: true
-Lint/OutOfRangeRegexpRef:
-  Enabled: true
-Lint/SelfAssignment:
-  Enabled: true
-Lint/TopLevelReturnWithArgument:
-  Enabled: true
-Lint/UnreachableLoop:
-  Enabled: true
-Style/ExplicitBlockArgument:
-  Enabled: true
-Style/GlobalStdStream:
-  Enabled: true
-Style/OptionalBooleanParameter:
-  Enabled: true
-Style/SingleArgumentDig:
-  Enabled: true
-Style/StringConcatenation:
-  Enabled: true
+
